# tickflow-rs

./: .gitignore  Cargo.toml  README.md  run-docker-postgres.sh  rust-toolchain.toml  symbols.csv
.github/workflows/: ci.yml
docs/: module_audit.md
examples/: alpaca_to_postgres.rs  polymarket_gamma_to_postgres.rs  polymarket_to_postgres.rs  yahoo_to_postgres.rs
scripts/: run-docker-postgres.sh
src/: config.rs  database.rs  datafeed.rs  lib.rs  main.rs  message_types.rs  messages.rs  prcoessor.rs  prelude.rs  processor.rs  websocket.rs
src/connectors/: mod.rs
src/connectors/alpaca/: mod.rs  types.rs  websocket.rs
src/connectors/polymarket/: client.rs  mod.rs  types.rs
src/connectors/yahoo/: client.rs  mod.rs  proxy_client.rs  symbols.rs  types.rs
src/core/: mod.rs  traits.rs
src/ingestion/: config.rs  messages.rs  mod.rs
src/pipeline/: builder.rs  datafeed.rs  mod.rs  processor.rs
src/storage/: mod.rs  postgres.rs
src/storage/postgres_handler/: alpaca.rs  mod.rs  polymarket.rs  yahoo.rs
tests/: messages.rs  pipeline.rs
