[package]
name = "tickflow"
version = "0.3.1-alpha"
edition = "2024"

[features]
default = ["alpaca", "postgres"]
alpaca = [
    "tokio-tungstenite",
    "tungstenite",
    "serde_json",
    "futures-util",
]
postgres = [
    "alpaca",
    "tokio-postgres",
    "chrono",
]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tungstenite = { version = "0.24", optional = true }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# PostgreSQL client
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

futures-util = { version = "0.3.31", optional = true } 
chrono = { version = "0.4.42", optional = true }
