[package]
name = "tickflow"
version = "0.3.1-alpha"
edition = "2024"

[features]
default = ["alpaca", "postgres", "yahoo"]
alpaca = [
    "tokio-tungstenite",
    "tungstenite",
    "serde_json",
    "futures-util",
]
postgres = [
    "alpaca",
    "tokio-postgres",
    "chrono",
]
yahoo = ["yfinance-rs"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
tungstenite = { version = "0.24", optional = true }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

# PostgreSQL client
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

futures-util = { version = "0.3.31", optional = true } 
chrono = { version = "0.4.42", optional = true }
yfinance-rs = { version = "0.7.2", optional = true }
rust_decimal = "1.39.0"

paft = { git = "https://github.com/paft-rs/paft", rev = "87b7e5a509db3c546ff83c2da46a62d35c0c3865", features = ["market", "fundamentals", "domain", "aggregates"] }
paft-domain = "0.7.1"
paft-money = "0.7.1"
